# Sensors

./: README.md
PixyCamTesting/: PixyCamTesting.ino
tabletennistrainer_ws/: build.sh  c_cpp_properties.json  compile_commands.json  install_deps.sh  launch.sh  ros2_env.sh  run_moveit_demo.sh  ttt_demo.rviz
tabletennistrainer_ws/src/gui/: marty_gui.py
tabletennistrainer_ws/src/ttt_bringup/launch/: calibrate_table.launch.py  calibration.py  camera_left.launch.py  jetsonA.launch.py  jetsonB.launch.py
tabletennistrainer_ws/src/ttt_bringup/scripts/: marty_gui.py
tabletennistrainer_ws/src/ttt_calibration/: CMakeLists.txt  package.xml
tabletennistrainer_ws/src/ttt_calibration/config/: camera_left_intrinsic.yaml  camera_right_intrinsic.yaml  stereo_extrinsic.yaml  table_markers.yaml
tabletennistrainer_ws/src/ttt_calibration/install/: local_setup.sh  setup.sh
tabletennistrainer_ws/src/ttt_calibration/install/ttt_calibration/share/ttt_calibration/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
tabletennistrainer_ws/src/ttt_calibration/launch/: calibrate_table_launch.py  calibration.launch.py
tabletennistrainer_ws/src/ttt_calibration/log/: latest_build
tabletennistrainer_ws/src/ttt_calibration/src/: arcuo_calibrate_camera.cpp  aruco_table_calibration_node.cpp  table_calibrator_node.cpp  tf_broadcaster_node.cpp
tabletennistrainer_ws/src/ttt_camera/src/: camera_node.cpp
tabletennistrainer_ws/src/ttt_control/: CMakeLists.txt  package.xml
tabletennistrainer_ws/src/ttt_control/config/: initial_positions.yaml  joint_limits.yaml  mainarmass.ros2_control.xacro  mainarmass.srdf  mainarmass.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml
tabletennistrainer_ws/src/ttt_control/launch/: move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py
tabletennistrainer_ws/src/ttt_control/meshes/: 59.stl  63.stl  67.stl  71.stl  75.stl  79.stl
tabletennistrainer_ws/src/ttt_control/src/: control_node.cpp
tabletennistrainer_ws/src/ttt_control/urdf/: mainarmass_fixed.urdf
tabletennistrainer_ws/src/ttt_hardware/: CMakeLists.txt  package.xml
tabletennistrainer_ws/src/ttt_hardware/src/: hardware_node.cpp
tabletennistrainer_ws/src/ttt_stereo/src/: stereo_node.cpp
tabletennistrainer_ws/src/ttt_trajectory/src/: trajectory_node.cpp
tabletennistrainer_ws/src/ttt_vision/: CMakeLists.txt
tabletennistrainer_ws/src/ttt_vision/src/: vision_node.cpp
